; ModuleID = '/home/carl/AnghaBench/linux/kernel/time/extr_timekeeping.c_timekeeping_max_deferment.c'
source_filename = "/home/carl/AnghaBench/linux/kernel/time/extr_timekeeping.c_timekeeping_max_deferment.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32, %struct.timekeeper }
%struct.timekeeper = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i32 }

@tk_core = common dso_local global %struct.TYPE_6__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @timekeeping_max_deferment() #0 {
  %1 = alloca %struct.timekeeper*, align 8
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store %struct.timekeeper* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @tk_core, i32 0, i32 1), %struct.timekeeper** %1, align 8
  br label %4

4:                                                ; preds = %12, %0
  %5 = call i32 @read_seqcount_begin(i32* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @tk_core, i32 0, i32 0))
  store i32 %5, i32* %2, align 4
  %6 = load %struct.timekeeper*, %struct.timekeeper** %1, align 8
  %7 = getelementptr inbounds %struct.timekeeper, %struct.timekeeper* %6, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 0
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  store i32 %11, i32* %3, align 4
  br label %12

12:                                               ; preds = %4
  %13 = load i32, i32* %2, align 4
  %14 = call i64 @read_seqcount_retry(i32* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @tk_core, i32 0, i32 0), i32 %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %4, label %16

16:                                               ; preds = %12
  %17 = load i32, i32* %3, align 4
  ret i32 %17
}

declare dso_local i32 @read_seqcount_begin(i32*) #1

declare dso_local i64 @read_seqcount_retry(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
